# maya-plugin-template

./: .gitignore  .gitmodules
release/mayaPluginTemplate/: mayaPluginTemplate.mod
src/: CMakeLists.txt  plugin.cpp  plugin.h
